--- a/Activity 1/index .html
+++ b/Activity 1/index .html
@@ -4,36 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carousel</title>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div class="container">
       <h2>Carousel Example</h2>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+
           <li data-target="#myCarousel" data-slide-to="1"></li>
+
           <li data-target="#myCarousel" data-slide-to="2"></li>
         </ol>
+
+        <!-- Wrapper for slides -->
+
         <div class="carousel-inner">
           <div class="item active">
-            <img src="image-1.jpg" alt="sonic's 30th anniversy" />
+            <img src="image-1.jpg" alt="Image 1" />
           </div>
+
           <div class="item">
-            <img src="image-2.jpg" alt="legendary pokemon" />
+            <img src="image-2.jpg" alt="Image 2" />
           </div>
+
           <div class="item">
-            <img src="image-3.jpg" alt="sonic's transformations" />
+            <img src="image-3.jpg" alt="Penguin" />
           </div>
         </div>
+
+        <!-- Left and right controls -->
+
         <a class="left carousel-control" href="" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span class="sr-only">Next</span>
+          <span class="glyphicon glyphicon-chevron-left"></span>
+
+          <span class="sr-only">Previous</span>
+        </a>
+
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+
+          <span class="sr-only">Next</span>
         </a>
       </div>
     </div>
